<resources>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_yet_register_here">Don\'t have an account yet or have forgotten your password? <i><u>Register here</u></i></string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="username">Username</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="e_mail">E-mail</string>
    <string name="register">register</string>
    <string name="welcome_to_please_login_to_your_account">Lorem Ipsum neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit…</string>
    <string name="company_logo">company logo</string>
    <string name="jina">jina</string>
    <string name="pass_not_match">Passwords don\'t match</string>
    <string name="fname_error">Enter first name</string>
    <string name="sname_error">Enter second name</string>
    <string name="username_error">Enter username</string>
    <string name="email_error">Enter e-mail</string>
    <string name="password_error">Enter password</string>
    <string name="confirm_password_error">Confirm password</string>
    <string name="app_name">e-loan</string>
    <string name="learn_more">Learn more</string>
    <string name="sign_up">Sign up</string>
    <string name="Already_have">Already have an account ?</string>
    <string name="log_in"><u>Log in</u></string>
    <string name="logo">E-Loan</string>
    <string name="motto">Quickest, easiest and friendliest way to get a fast loan on your device!</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_number">Enter your phone number</string>
    <string name="text_view_description">We will send you a text to verify your number</string>
    <string name="enter_phone">Enter your phone number</string>
    <string name="text_view_254">+254</string>
    <string name="button_send_otp">SEND OTP</string>
    <string name="information_text">You must enter your phone number</string>
    <string name="logo1">Logo1</string>
    <string name="enter_otp">Enter the one time verification pin we sent you</string>
    <string name="verify_otp">VERIFY OTP</string>
    <string name="information_text1">Please fill in your phone number</string>
    <string name="otp_code">Enter OTP code</string>
    <string name="otp_verification_failed">OTP verification failed, please try again</string>
    <string name="verification_failed">Verification Failed, please try again.</string>
    <string name="hello">HELLO AND WELCOME TO E-LOAN</string>
    <string name="welcome1">Welcome to Easy loan. Our mobile loans are quick, easy to apply and unlike other mobile loans in the market, do not accrue interest. Proceed to check your loan limit and borrow an unsecured loan within 5 minutes straight to your M-PESA !</string>
    <string name="text_view_congratulations">Sorry, you do not qualify for a loan at this time. However, you should not lose hope, check back again after one month</string>
    <string name="button_check_limit">check your limit</string>
    <string name="text_view_conditions">To borrow your first loan, you are required to pay a processing fee of 100 kes.This fee will settle your interest, therefore, your loan will not attract any interest. You will pay back the exact amount loaned out to you. Isn\'t that awesome?</string>
    <string name="button_pay_fee">Accept terms &amp; pay fee</string>
    <string name="terms_conditions">TERMS AND CONDITIONS</string>
    <string name="logoo">Logoo</string>
    <string name="img_cancel">Cancel</string>
    <string name="phone_number">Phone number</string>
    <string name="amount">Amount :</string>
    <string name="banner_ad_unit_id">ca-app-pub-8199773971116374/9049374411</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="please_read_and_accept_our_privacy_policy_in_order_to_check_your_elligibility_and_loan_limit">Please read and accept our privacy policy in order to check your eligibility and loan limit</string>
    <string name="read_privacy_policy">read privacy policy</string>
    <string name="privacy_policy_bentech_solutions">
        \n<b>Privacy Policy.</b>
        \n
        \nBenTech solutions built the e–loan app as a Commercial app.This SERVICE is provided by BenTech solutions and is intended for use as is. This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.
        If you choose to use our Service, then you agree to the collection and use of information in relation to this policy.
        The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.
        The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at e-loan unless otherwise defined in this Privacy Policy.
        \n\n<b>Rates, fees and repayment periods.</b>
        \n\nOur loans are subject to an initial fee of 100 ksh that is paid upon accepting these terms and conditions, checking your loan limit and your eligibility being confirmed.
        \nLoan repayment period is between 3 months to 6 months. Failure to repay your loan within this period, e-loan reserves the right to institute loan recovery options it may deem fit.
        \nWe provide the loan by depositing it into the phone number provided upon registration, this phone number also acts as your username.
        \nFees and charges that apply to the loan may be deducted from the loan before depositing it into your M-PESA.
        \n\nInterest, fees and charges
        \n\nInterest
        \nThe interest rate on our loans is at a market low 10 %  of the total amount loaned out to you.i.e if you qualify for a loan of 1000 ksh,
        then you shall repay 1100 ksh at the within the repayment period. No punitive interests accrue on your loan.
        \nYou must pay the loan within the stipulated 3 to 6 months at the flat rate set of 10% interest.
        \nUnless otherwise specified in our agreement, interest is calculated on a 30/360 day year basis.
        \nInterest and loans is payable on the dates set out in the approval or elsewhere in our agreement.
        \nIf we vary the interest rate, we will give you notice of the effective date of the revised interest rate. We may notify you by public announcement in daily newspapers
        , email communication, SMS or through our app. You accept such notification as adequate.
        \n\nRepayment
        \nRepayment by instalments
        \nYou may repay the loan in instalments. We notify you the amount of the instalment and each instalment payment date via sms when your loan request is approved.
        \nThe instalments are payable even if you do not withdraw any of the loan funds we deposit in your account.
        \nIf we vary the interest rate on the loan, we may vary the instalment amount and/or the number of instalments.
        \n\n<b>Information Collection and Use.</b>
        \n\nFor a better experience ,while using our Service, we may require you to provide us with certain personally identifiable information, including but not limited to Name, phone number.
        The information that we request will be retained by us and used as described in this privacy policy.
        \nThe app does use third party services that may collect information used to identify you.
        \nLink to privacy policy of third party service providers used by the app.
        \nGoogle Play Services
        \nAdMob
        \n\n<b>Log Data.</b>
        \n\nWe want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.
        \n\n<b>Cookies.</b>
        \n\nCookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory. This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.
        \n\n<b>Service Providers.</b>
        \n\nWe may employ third-party companies and individuals due to the following reasons:
        \nTo facilitate our Service;
        \nTo provide the Service on our behalf;
        \nTo perform Service-related services; or
        \nTo assist us in analyzing how our Service is used.
        \nWe want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.
        \n\n<b>Security.</b>
        \n\nWe value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.
        \n\n<b>Links to Other Sites.</b>
        \n\nThis Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.
        \n\n<b>Children’s Privacy.</b>
        \n\nThese Services do not address anyone under the age of 16. We do not knowingly collect personally identifiable information from children under 16. In the case we discover that a child under 16 has provided us with personal information, we immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to do necessary actions.
        \n\n<b>Changes to This Privacy Policy.</b>
        \n\nWe may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page.
        \nThis policy is effective as of 2020-11-16
        \n\n<b>Contact Us.</b>
        \n\nIf you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at bensonkyp254@gmail.com.
        \nThis privacy policy page was created at privacypolicytemplate.net and modified/generated by App Privacy Policy Generator</string>
    <string name="accept_terms_and_conditions">accept terms and conditions</string>
    <string name="decline_and_exit_app">decline and exit</string>
</resources>