<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bckgrd"
    android:backgroundTint="?attr/colorAccent"
    android:backgroundTintMode="multiply"
    tools:context=".HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    app:adSize="BANNER"
                    app:adUnitId="@string/banner_ad_unit_id"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_welcome"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/adView">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/design_default_color_primary_dark"
                        android:backgroundTintMode="screen">

                        <TextView
                            android:id="@+id/tv_hello"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@android:color/holo_blue_bright"
                            android:textSize="18sp"
                            android:textStyle="bold|italic"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/text_view_welcome"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:gravity="center"
                            android:text="@string/welcome1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/colorLight"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_hello" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_privacy_policy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_view_welcome">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tv_read_policy"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/privacy_policy"
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@android:color/holo_blue_bright"
                            android:textSize="18sp"
                            android:textStyle="bold|italic"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_eligibility"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:gravity="center"
                            android:text="@string/please_read_and_accept_our_privacy_policy_in_order_to_check_your_elligibility_and_loan_limit"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/colorLight"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_read_policy" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/button_privacy_policy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/read_privacy_policy"
                            android:textColor="@android:color/holo_orange_dark"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:backgroundTint="@color/material_deep_teal_50"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_eligibility"
                            app:rippleColor="@android:color/holo_red_dark" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_check_limit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:visibility="visible"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_view_privacy_policy">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:layout_editor_absoluteX="10dp"
                        tools:layout_editor_absoluteY="11dp">

                        <TextView
                            android:id="@+id/text_view_congratulations"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="8dp"
                            android:gravity="center"
                            android:text="@string/text_view_congratulations"
                            android:textColor="@android:color/holo_red_dark"
                            android:textSize="18sp"
                            android:visibility="invisible"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/progressBar3" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/button_check_limit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/button_check_limit"
                            android:textColor="@android:color/holo_orange_dark"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:backgroundTint="@color/material_deep_teal_50"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:rippleColor="@android:color/holo_red_dark" />

                        <ProgressBar
                            android:id="@+id/progressBar3"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:max="30"
                            android:progress="0"
                            android:progressDrawable="@drawable/custom_progress"
                            android:visibility="invisible"
                            app:layout_constraintEnd_toEndOf="@+id/button_check_limit"
                            app:layout_constraintStart_toStartOf="@+id/button_check_limit"
                            app:layout_constraintTop_toBottomOf="@+id/button_check_limit" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_terms_and_conditions"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:visibility="invisible"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_view_check_limit">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/text_view_terms_conditions"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/terms_conditions"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/colorA"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/text_view_conditions"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/text_view_conditions"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/colorLight"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/text_view_terms_conditions" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/button_pay_fee"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="1dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/button_pay_fee"
                            android:textColor="@android:color/holo_orange_dark"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:backgroundTint="@color/material_deep_teal_50"
                            app:rippleColor="@android:color/holo_red_dark"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/text_view_conditions" />


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>